--- a/package.json
+++ b/package.json
@@ -39,7 +39,15 @@
     "url": "https://github.com/strong-roots-capital/subtract-timeframe/issues"
   },
   "homepage": "https://github.com/strong-roots-capital/subtract-timeframe",
-  "dependencies": {},
+  "dependencies": {
+    "@strong-roots-capital/duration-of-timeframe": "^1.0.0",
+    "@strong-roots-capital/is-tradingview-format": "^1.2.3",
+    "debug": "^4.1.1",
+    "market-session": "^2.0.4",
+    "moment": "^2.24.0",
+    "ow": "^0.12.0",
+    "supports-color": "^6.1.0"
+  },
   "devDependencies": {
     "@types/node": "^10.14.4",
     "ava": "^1.4.1",
